fixed navbar collapse button and fit-content

--- a/styleTFT.css
+++ b/styleTFT.css
@@ -4,7 +4,7 @@
 
 nav{
     width: 100%;
-  height: 50px;
+  height: fit-content;
   position: absolute;
   top: 0;
   left: 0;
